<resources>
    <string name="app_name">FellowChef</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_item_title_proxy">Recipe Title</string>
    <string name="recipe_short_description_proxy">Short Recipe Description</string>
    <string name="content_desc_image_default">An image that is displayed</string>
    <string name="hint_recipe_name">Enter the Recipe Name</string>
    <string name="label_recipe_name">Recipe Name:</string>
    <string name="label_recipe_type">Recipe Type:</string>
    <string name="radio_button_breakfast">Breakfast</string>
    <string name="radio_button_brunch">Brunch</string>
    <string name="radio_button_lunch">Lunch</string>
    <string name="radio_button_dinner">Dinner</string>
    <string name="radio_button_snack">Snack</string>
    <string name="label_recipe_ingredients">What are the ingredients used for your recipe?</string>
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="button_next">Next</string>
    <string name="input_text_ingredient">Ingredient Name</string>
    <string name="label_add_instructions">Add Instructions to Make the Recipe</string>
    <string name="add_instruction_button">+</string>
    <string name="hint_instruction_step">Instruction</string>
    <string name="minus_symbol">-</string>
    <string name="button_add_instruction">Add Instruction</string>
    <string name="hint_add_instruction">Add a instruction step</string>
    <string name="trending_text">Trending</string>
    <string name="popular_week_text">Popular this week</string>
    <string name="ingredients">Ingredients</string>
    <string name="serving_size_text">Servings Size : </string>
    <string name="instructions">Instructions</string>
    <string name="recipe_detail_action_bar_text">Recipe Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error_text">You must turn on the network in order to proceed!</string>
    <string name="search_text">Search</string>
    <string name="title_search">Search</string>
    <string name="difficulty_section">Difficulty</string>
    <string name="meal_type_section">Meal Type</string>
    <string name="cuisine_section">Cuisine</string>
    <string name="diet_type_section">Diet Type</string>
    <string name="occasion_type_section">Occasion</string>
    <string name="default_error">An unknown error has occured. Please try again later.</string>
    <string name="search_result_label">Results</string>
</resources>