<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addRecipeIngredientsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipeIngredientsFragment">

        <TextView
            android:id="@+id/add_recipe_ingredient_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_recipe_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_add_ingredient_next"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/number_input_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:ems="3"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintTop_toBottomOf="@+id/add_recipe_ingredient_label" />

        <Button
            android:id="@+id/buttonAddIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_add_ingredient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Spinner
            android:id="@+id/spinner_measurement_sizes"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/number_input_ingredient"
            app:layout_constraintEnd_toEndOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintStart_toEndOf="@+id/number_input_ingredient"
            app:layout_constraintTop_toTopOf="@+id/number_input_ingredient" />

        <LinearLayout
            android:id="@+id/layoutIngredientList"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_margin="@dimen/ingredient_list_margin"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAddIngredient"></LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/input_text_ingredient"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/button_add_ingredient_next"
            app:layout_constraintEnd_toEndOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintStart_toStartOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintTop_toBottomOf="@+id/add_recipe_ingredient_label"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>